Oops Methods and Selenium Navigation and Select Dropdown

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\sarth\AppData\Local\Temp\testng-eclipse--1166099129\testng-customsuite.xml</span>
+                    <span>C:\Users\sarth\AppData\Local\Temp\testng-eclipse-1311899511\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TestNG.Day10_Jan_17_2024_Introduction_to_TestNG.Enablement_Disablement_TestCases" class="method navigator-link" hash-for-method="logic1">logic1</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TestNG.Day10_Jan_17_2024_Introduction_to_TestNG.Enablement_Disablement_TestCases" class="method navigator-link" hash-for-method="logic3">logic3</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day11_Jan_23_2024_Cookies_Dropdown.Select_Dropdown" class="method navigator-link" hash-for-method="facebookDateOfBirthDropdown">facebookDateOfBirthDropdown</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.TestNG.Day10_Jan_17_2024_Introduction_to_TestNG.Enablement_Disablement_TestCases</span>
+              <span class="class-name">com.automation.Day11_Jan_23_2024_Cookies_Dropdown.Select_Dropdown</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="logic1">
-                  </a> <!-- logic1 -->
-                  <span class="method-name">logic1</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="logic3">
-                  </a> <!-- logic3 -->
-                  <span class="method-name">logic3</span>
+                  <a name="facebookDateOfBirthDropdown">
+                  </a> <!-- facebookDateOfBirthDropdown -->
+                  <span class="method-name">facebookDateOfBirthDropdown</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sarth\AppData\Local\Temp\testng-eclipse--1166099129\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sarth\AppData\Local\Temp\testng-eclipse-1311899511\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.TestNG.Day10_Jan_17_2024_Introduction_to_TestNG.Enablement_Disablement_TestCases&quot;/&gt;
+      &lt;class name=&quot;com.automation.Day11_Jan_23_2024_Cookies_Dropdown.Select_Dropdown&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'logic1')
-data.setCell(0, 2, 'com.TestNG.Day10_Jan_17_2024_Introduction_to_TestNG.Enablement_Disablement_TestCases')
-data.setCell(0, 3, 10);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'logic3')
-data.setCell(1, 2, 'com.TestNG.Day10_Jan_17_2024_Introduction_to_TestNG.Enablement_Disablement_TestCases')
-data.setCell(1, 3, 1);
+data.setCell(0, 1, 'facebookDateOfBirthDropdown')
+data.setCell(0, 2, 'com.automation.Day11_Jan_23_2024_Cookies_Dropdown.Select_Dropdown')
+data.setCell(0, 3, 5743);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 ms</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -225,16 +209,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.TestNG.Day10_Jan_17_2024_Introduction_to_TestNG.Enablement_Disablement_TestCases</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">logic2</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -243,14 +220,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.TestNG.Day10_Jan_17_2024_Introduction_to_TestNG.Enablement_Disablement_TestCases</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.automation.Day11_Jan_23_2024_Cookies_Dropdown.Select_Dropdown</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">logic1</span>
+                <span class="method-name">facebookDateOfBirthDropdown</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">logic3</span>
-                <span class="method-start">14 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
