--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">47</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,784</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.TestNG.Day10_Jan_17_2024_Introduction_to_TestNG.Enablement_Disablement_TestCases</td><td><a href="#m0">logic1</a></td><td rowspan="1">1705549310760</td><td rowspan="1">10</td></tr><tr class="passedeven"><td><a href="#m1">logic3</a></td><td rowspan="1">1705549310774</td><td rowspan="1">1</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.automation.Day11_Jan_23_2024_Cookies_Dropdown.Select_Dropdown</td><td><a href="#m0">facebookDateOfBirthDropdown</a></td><td rowspan="1">1706065672704</td><td rowspan="1">5743</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.TestNG.Day10_Jan_17_2024_Introduction_to_TestNG.Enablement_Disablement_TestCases#logic1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.TestNG.Day10_Jan_17_2024_Introduction_to_TestNG.Enablement_Disablement_TestCases#logic3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.automation.Day11_Jan_23_2024_Cookies_Dropdown.Select_Dropdown#facebookDateOfBirthDropdown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
