--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\sarth\AppData\Local\Temp\testng-eclipse--1617612820\testng-customsuite.xml</span>
+                    <span>C:\Users\sarth\AppData\Local\Temp\testng-eclipse-900683849\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day14_Jan_31_2024_Introduction_To_DataDriven_Testing.TN_Data_From_PropertiesFile" class="method navigator-link" hash-for-method="userPath">userPath</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions" class="method navigator-link" hash-for-method="explicitWaitUnderstanding">explicitWaitUnderstanding</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.automation.Day14_Jan_31_2024_Introduction_To_DataDriven_Testing.TN_Data_From_PropertiesFile</span>
+              <span class="class-name">com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="userPath">
-                  </a> <!-- userPath -->
-                  <span class="method-name">userPath</span>
+                  <a name="explicitWaitUnderstanding">
+                  </a> <!-- explicitWaitUnderstanding -->
+                  <span class="method-name">explicitWaitUnderstanding</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sarth\AppData\Local\Temp\testng-eclipse--1617612820\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sarth\AppData\Local\Temp\testng-eclipse-900683849\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.automation.Day14_Jan_31_2024_Introduction_To_DataDriven_Testing.TN_Data_From_PropertiesFile&quot;&gt;
+      &lt;class name=&quot;com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;userPath&quot;/&gt;
+          &lt;include name=&quot;explicitWaitUnderstanding&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.automation.Day14_Jan_31_2024_Introduction_To_DataDriven_Testing.TN_Data_From_PropertiesFile --&gt;
+      &lt;/class&gt; &lt;!-- com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'userPath')
-data.setCell(0, 2, 'com.automation.Day14_Jan_31_2024_Introduction_To_DataDriven_Testing.TN_Data_From_PropertiesFile')
-data.setCell(0, 3, 9);
+data.setCell(0, 1, 'explicitWaitUnderstanding')
+data.setCell(0, 2, 'com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions')
+data.setCell(0, 3, 16200);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 ms</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -217,9 +217,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.automation.Day14_Jan_31_2024_Introduction_To_DataDriven_Testing.TN_Data_From_PropertiesFile</span>
+              <span class="ignored-class-name">com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">helpingHowToReadFromAPropertiesFile</span>
+                <span class="ignored-method-name">implicitWaitUnderstanding</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -231,9 +231,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.automation.Day14_Jan_31_2024_Introduction_To_DataDriven_Testing.TN_Data_From_PropertiesFile</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">userPath</span>
+                <span class="method-name">explicitWaitUnderstanding</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
