Abstraction, DataProvider, Date Class

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\sarth\AppData\Local\Temp\testng-eclipse-900683849\testng-customsuite.xml</span>
+                    <span>C:\Users\sarth\AppData\Local\Temp\testng-eclipse--1362404828\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">10 methods,   10 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,52 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions" class="method navigator-link" hash-for-method="explicitWaitUnderstanding">explicitWaitUnderstanding</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities" class="method navigator-link" hash-for-method="registerCodeWithEmailStyleUpdated">registerCodeWithEmailStyleUpdated</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities" class="method navigator-link" hash-for-method="registerCodeWithEmailStyleUpdated">registerCodeWithEmailStyleUpdated</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities" class="method navigator-link" hash-for-method="registerCodeWithEmailStyleUpdated">registerCodeWithEmailStyleUpdated</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities" class="method navigator-link" hash-for-method="registerCodeWithEmailStyleUpdated">registerCodeWithEmailStyleUpdated</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities" class="method navigator-link" hash-for-method="registerCodeWithEmailStyleUpdated">registerCodeWithEmailStyleUpdated</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities" class="method navigator-link" hash-for-method="registerCodeWithEmailStyleUpdated">registerCodeWithEmailStyleUpdated</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities" class="method navigator-link" hash-for-method="registerCodeWithEmailStyleUpdated">registerCodeWithEmailStyleUpdated</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities" class="method navigator-link" hash-for-method="registerCodeWithEmailStyleUpdated">registerCodeWithEmailStyleUpdated</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities" class="method navigator-link" hash-for-method="registerCodeWithEmailStyleUpdated">registerCodeWithEmailStyleUpdated</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities" class="method navigator-link" hash-for-method="registerCodeWithEmailStyleUpdated">registerCodeWithEmailStyleUpdated</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +166,77 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions</span>
+              <span class="class-name">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="explicitWaitUnderstanding">
-                  </a> <!-- explicitWaitUnderstanding -->
-                  <span class="method-name">explicitWaitUnderstanding</span>
+                  <a name="registerCodeWithEmailStyleUpdated">
+                  </a> <!-- registerCodeWithEmailStyleUpdated -->
+                  <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="registerCodeWithEmailStyleUpdated">
+                  </a> <!-- registerCodeWithEmailStyleUpdated -->
+                  <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="registerCodeWithEmailStyleUpdated">
+                  </a> <!-- registerCodeWithEmailStyleUpdated -->
+                  <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="registerCodeWithEmailStyleUpdated">
+                  </a> <!-- registerCodeWithEmailStyleUpdated -->
+                  <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="registerCodeWithEmailStyleUpdated">
+                  </a> <!-- registerCodeWithEmailStyleUpdated -->
+                  <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="registerCodeWithEmailStyleUpdated">
+                  </a> <!-- registerCodeWithEmailStyleUpdated -->
+                  <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="registerCodeWithEmailStyleUpdated">
+                  </a> <!-- registerCodeWithEmailStyleUpdated -->
+                  <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="registerCodeWithEmailStyleUpdated">
+                  </a> <!-- registerCodeWithEmailStyleUpdated -->
+                  <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="registerCodeWithEmailStyleUpdated">
+                  </a> <!-- registerCodeWithEmailStyleUpdated -->
+                  <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="registerCodeWithEmailStyleUpdated">
+                  </a> <!-- registerCodeWithEmailStyleUpdated -->
+                  <span class="method-name">registerCodeWithEmailStyleUpdated</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +244,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sarth\AppData\Local\Temp\testng-eclipse-900683849\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sarth\AppData\Local\Temp\testng-eclipse--1362404828\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +253,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions&quot;&gt;
+      &lt;class name=&quot;com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;explicitWaitUnderstanding&quot;/&gt;
+          &lt;include name=&quot;registerCodeWithEmailStyleUpdated&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions --&gt;
+      &lt;/class&gt; &lt;!-- com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -189,16 +297,52 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(10);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'explicitWaitUnderstanding')
-data.setCell(0, 2, 'com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions')
-data.setCell(0, 3, 16200);
+data.setCell(0, 1, 'registerCodeWithEmailStyleUpdated')
+data.setCell(0, 2, 'com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities')
+data.setCell(0, 3, 8168);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'registerCodeWithEmailStyleUpdated')
+data.setCell(1, 2, 'com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities')
+data.setCell(1, 3, 7166);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'registerCodeWithEmailStyleUpdated')
+data.setCell(2, 2, 'com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities')
+data.setCell(2, 3, 6956);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'registerCodeWithEmailStyleUpdated')
+data.setCell(3, 2, 'com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities')
+data.setCell(3, 3, 6885);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'registerCodeWithEmailStyleUpdated')
+data.setCell(4, 2, 'com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities')
+data.setCell(4, 3, 6696);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'registerCodeWithEmailStyleUpdated')
+data.setCell(5, 2, 'com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities')
+data.setCell(5, 3, 6624);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'registerCodeWithEmailStyleUpdated')
+data.setCell(6, 2, 'com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities')
+data.setCell(6, 3, 6581);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'registerCodeWithEmailStyleUpdated')
+data.setCell(7, 2, 'com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities')
+data.setCell(7, 3, 6567);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'registerCodeWithEmailStyleUpdated')
+data.setCell(8, 2, 'com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities')
+data.setCell(8, 3, 6463);
+data.setCell(9, 0, 9)
+data.setCell(9, 1, 'registerCodeWithEmailStyleUpdated')
+data.setCell(9, 2, 'com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities')
+data.setCell(9, 3, 6394);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,16 +357,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">implicitWaitUnderstanding</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -231,10 +368,46 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.automation.Day15_Feb_06_2024_Wait_Conditions_in_Selenium.What_Are_Wait_Conditions</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">explicitWaitUnderstanding</span>
+                <span class="method-name">registerCodeWithEmailStyleUpdated</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                <span class="method-start">8174 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                <span class="method-start">15133 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                <span class="method-start">21704 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                <span class="method-start">28872 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                <span class="method-start">35570 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                <span class="method-start">42154 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                <span class="method-start">49041 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                <span class="method-start">55505 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">registerCodeWithEmailStyleUpdated</span>
+                <span class="method-start">62130 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
