--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,19 +9,48 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">10</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">68,571</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">603</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="10">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities</td><td><a href="#m0">registerCodeWithEmailStyleUpdated</a></td><td rowspan="10">1707362748270</td><td rowspan="10">6956</td></tr><tr class="passedeven"><td><a href="#m1">registerCodeWithEmailStyleUpdated</a></td></tr><tr class="passedeven"><td><a href="#m2">registerCodeWithEmailStyleUpdated</a></td></tr><tr class="passedeven"><td><a href="#m3">registerCodeWithEmailStyleUpdated</a></td></tr><tr class="passedeven"><td><a href="#m4">registerCodeWithEmailStyleUpdated</a></td></tr><tr class="passedeven"><td><a href="#m5">registerCodeWithEmailStyleUpdated</a></td></tr><tr class="passedeven"><td><a href="#m6">registerCodeWithEmailStyleUpdated</a></td></tr><tr class="passedeven"><td><a href="#m7">registerCodeWithEmailStyleUpdated</a></td></tr><tr class="passedeven"><td><a href="#m8">registerCodeWithEmailStyleUpdated</a></td></tr><tr class="passedeven"><td><a href="#m9">registerCodeWithEmailStyleUpdated</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.TestNG.Day17_Feb_13_2024_DataProvider_ExcelSheet.TestCase</td><td><a href="#m0">loginTutorialsNinjaTest</a></td><td rowspan="1">1707880329829</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities#registerCodeWithEmailStyleUpdated</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities#registerCodeWithEmailStyleUpdated</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities#registerCodeWithEmailStyleUpdated</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities#registerCodeWithEmailStyleUpdated</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities#registerCodeWithEmailStyleUpdated</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities#registerCodeWithEmailStyleUpdated</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities#registerCodeWithEmailStyleUpdated</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities#registerCodeWithEmailStyleUpdated</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities#registerCodeWithEmailStyleUpdated</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">com.automation.Day16_Feb_07_2024_Date_Class_Concepts.Utilities#registerCodeWithEmailStyleUpdated</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.TestNG.Day17_Feb_13_2024_DataProvider_ExcelSheet.TestCase#loginTutorialsNinjaTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.RuntimeException: java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.xssf.usermodel.XSSFCell.getCellType()&quot; because &quot;cell&quot; is null
+	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethodNoCheckedException(MethodInvocationHelper.java:57)
+	at org.testng.internal.invokers.MethodInvocationHelper.invokeDataProvider(MethodInvocationHelper.java:157)
+	at org.testng.internal.Parameters.handleParameters(Parameters.java:812)
+	at org.testng.internal.Parameters.handleParameters(Parameters.java:737)
+	at org.testng.internal.invokers.ParameterHandler.handleParameters(ParameterHandler.java:72)
+	at org.testng.internal.invokers.ParameterHandler.createParameters(ParameterHandler.java:51)
+	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:915)
+	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:201)
+	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:148)
+	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at org.testng.TestRunner.privateRun(TestRunner.java:819)
+	at org.testng.TestRunner.run(TestRunner.java:619)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:443)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:437)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:397)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:336)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1301)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1228)
+	at org.testng.TestNG.runSuites(TestNG.java:1134)
+	at org.testng.TestNG.run(TestNG.java:1101)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+Caused by: java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.xssf.usermodel.XSSFCell.getCellType()&quot; because &quot;cell&quot; is null
+	at com.TestNG.Day17_Feb_13_2024_DataProvider_ExcelSheet.ExcelCode.readFromExcelSheetTNLogin(ExcelCode.java:48)
+	at com.TestNG.Day17_Feb_13_2024_DataProvider_ExcelSheet.ExcelCode.getTNExcelLoginData(ExcelCode.java:27)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
+	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
+	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:84)
+	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethodNoCheckedException(MethodInvocationHelper.java:53)
+	... 25 more
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
