--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\sarth\AppData\Local\Temp\testng-eclipse-1074943936\testng-customsuite.xml</span>
+                    <span>C:\Users\sarth\AppData\Local\Temp\testng-eclipse-1058798162\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.TestNG.Day17_Feb_13_2024_DataProvider_ExcelSheet.TestCase" class="method navigator-link" hash-for-method="loginTutorialsNinjaTest">loginTutorialsNinjaTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.TestNG.Day17_Feb_13_2024_DataProvider_ExcelSheet.TestCase" class="method navigator-link" hash-for-method="loginTNTest">loginTNTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginTutorialsNinjaTest">
-                  </a> <!-- loginTutorialsNinjaTest -->
-                  <span class="method-name">loginTutorialsNinjaTest</span>
+                  <a name="loginTNTest">
+                  </a> <!-- loginTNTest -->
+                  <span class="method-name">loginTNTest</span>
                   <div class="stack-trace">java.lang.RuntimeException: java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.xssf.usermodel.XSSFCell.getCellType()&quot; because &quot;cell&quot; is null
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethodNoCheckedException(MethodInvocationHelper.java:57)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeDataProvider(MethodInvocationHelper.java:157)
@@ -176,7 +176,7 @@ Caused by: java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.xs
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sarth\AppData\Local\Temp\testng-eclipse-1074943936\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sarth\AppData\Local\Temp\testng-eclipse-1058798162\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -187,7 +187,7 @@ Caused by: java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.xs
     &lt;classes&gt;
       &lt;class name=&quot;com.TestNG.Day17_Feb_13_2024_DataProvider_ExcelSheet.TestCase&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;loginTutorialsNinjaTest&quot;/&gt;
+          &lt;include name=&quot;loginTNTest&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- com.TestNG.Day17_Feb_13_2024_DataProvider_ExcelSheet.TestCase --&gt;
     &lt;/classes&gt;
@@ -231,7 +231,7 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginTutorialsNinjaTest')
+data.setCell(0, 1, 'loginTNTest')
 data.setCell(0, 2, 'com.TestNG.Day17_Feb_13_2024_DataProvider_ExcelSheet.TestCase')
 data.setCell(0, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
